# robotic-arm-computer-vision

./: .gitignore  README.md  calibration_intrinseque.pkl  calibration_intrinsique.py  comparaison-algos.md  comparaison_calibrations.py  detection_avec_repere_aruco.py  detection_avec_repere_aruco_map.py  detection_yolo.py  enregistrer_video_corrigee.py  generer_marqueurs_aruco.py  get_realsense_intrinsics.py  main.py  pyproject.toml  realsense_calibration.json  run_app.sh  run_tests.py  test_camera.py  test_camera_simple.py  visualiser_repere_camera.py
.github/workflows/: create-issues.yml
.streamlit/: config.toml
app/: app.py  requirements.txt
app/utils/: paths.py  run_sim_episode.py  run_sim_interactive.py  style.py
dataset_localisation/: extraire_frames.py  renumeroter_images.py
dataset_localisation/dataset_yolo/: classes.txt  notes.json
src/aruco/: detection_avec_repere_aruco.py  detection_module.py
src/robot/: cross_q.py  detection_module.py  her.py  her_push_in_hole.py  her_sorting.py  main.py  mirror.py  mirror_v2.py  plot_comparison.py  ppo_algo.py  reaching_env.py  sac_algo.py  scene_reaching.xml  sim_3dofs.py  sim_from_real.py  sim_to_real.py  td3_algo.py  test_real_draw_forms.py  test_sim.py  train.py  training_utils.py  zero_dxl.py
tests/: test_aruco_detection.py  test_aruco_map.py  test_camera.py  test_camera_simple.py  test_depth_realsense.py  test_yolo_detection.py
tests/calibration/: test_undistort.py
tests/robot/: test_cross_q.py  test_env.py  test_her.py  test_mirror.py  test_real_draw_forms.py  test_robot_envs.py  test_sim.py
(+206 files in other folders)
