[project]
name = "robotic-arm-computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynamixel-sdk>=4.0.3",
    "gymnasium>=1.2.3",
    "mujoco>=3.6.0",
    "onshape-to-robot>=1.8.1",
    "placo>=0.9.20",
    "pyserial>=3.5",
    "sb3-contrib>=2.7.1",
    "stable-baselines3>=2.7.1",
]
